# sandvox

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
assets/: NOTES.md  blocks.toml  cozette.bdf  icons.json  robot_merged.glb  sounds.toml  ui.json  ui.toml
morton/: Cargo.toml
morton/benches/: bench_against_morton_encoding.rs
morton/src/: bitops.rs  lib.rs
sandvox/: Cargo.toml  build.rs
sandvox-rcon/: Cargo.toml
sandvox-rcon-client/: Cargo.toml
sandvox-rcon-client/src/: lib.rs  main.rs
sandvox-rcon/src/: lib.rs
sandvox-xtask/: Cargo.toml
sandvox-xtask/src/: main.rs  model.rs  skybox.rs  tres.rs
sandvox/benches/: mesh_chunk.rs
sandvox/src/: app.rs  build_info.rs  config.rs  input.rs  lib.rs  main.rs  rcon.rs
sandvox/src/collide/: aabb.rs  frustrum.rs  mod.rs
sandvox/src/ecs/: background_tasks.rs  mod.rs  parallel_local.rs  plugin.rs  schedule.rs  workspace.rs
sandvox/src/ecs/transform/: global.rs  local.rs  mod.rs  systems.rs
sandvox/src/game/: block_type.rs  camera_controller.rs  celestial.rs  file.rs  mod.rs  terrain.rs
sandvox/src/profiler/: mod.rs  wgpu.rs
sandvox/src/render/: animation.rs  atlas.rs  camera.rs  camera_controller.rs  command.rs  depth.rs  fps_counter.rs  frame.rs  light.rs  mesh.rs  mesh.wgsl  mod.rs  model.rs  phase.rs  render_target.rs  shadow_map.rs  skybox.rs  skybox.wgsl  staging.rs  surface.rs  text.rs  text.wgsl  texture_atlas.rs  texture_atlas.wgsl
sandvox/src/render/pass/: context.rs  main_pass.rs  mod.rs  phase.rs  ui_pass.rs
sandvox/src/render/text/: font_atlas.rs  mod.rs
sandvox/src/sound/: mod.rs  music.rs  output.rs  playback.rs  sounds.rs
sandvox/src/ui/: debug.wgsl  layout.rs  mod.rs  render.rs  render.wgsl  sprites.rs  text.rs  text.wgsl  view.rs
sandvox/src/ui/widgets/: container.rs  mod.rs  text.rs
sandvox/src/util/: bitmatrix_transpose.rs  image.rs  mod.rs  noise.rs  oneshot.rs  serde.rs  sparse_vec.rs  stats_alloc.rs  tokio.rs
sandvox/src/voxel/: block_face.rs  chunk.rs  chunk_generator.rs  chunk_map.rs  flat.rs  flat.wgsl  greedy_quads.rs  loader.rs  mesh.rs  mod.rs  voxel.wgsl
sandvox/src/voxel/mesh/: greedy_quads.rs  mod.rs  naive.rs  opacity_mask.rs
sandvox/src/wgpu/: image.rs  mod.rs  query.rs
sandvox/src/wgpu/blit/: blit.wgsl  fill.wgsl  mod.rs
sandvox/src/wgpu/buffer/: mod.rs  staged.rs  typed.rs
sandvox/src/wgpu/buffer/staging/: write.rs
sandvox/src/world/: block_type.rs  file.rs  mod.rs  terrain.rs
sandvox/src/world/worldgen/: mod.rs  noise.rs  terrain.rs
world_configs/: empty_world.toml  single_chunk.toml  smol.toml
