[workspace]
resolver = "2"
members = [
    "morton",
    "sandvox",
    "sandvox-rcon",
    "sandvox-rcon-client",
    "sandvox-xtask",
]

#[profile.dev.package.sandvox]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.dev.package."morton"]
opt-level = 3
debug-assertions = false
overflow-checks = false


[patch.crates-io]
rodio = { git = "https://github.com/jgraef/rodio.git", branch = "switch/main" }
