[package]
name = "sandvox-xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
image = "0.25.9"
nalgebra = "0.34.1"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
