[package]
name = "sandvox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.17.3", default-features = false, features = [
    "bevy_reflect",
    "trace",
    "track_location",
    "multi_threaded",
] }
bevy_reflect = { version = "0.17.3", default-features = false, features = [
    "auto_register",
    "auto_register_inventory",
    "std",
] }
bevy_tasks = { version = "0.17.3", default-features = false, features = [
    "multi_threaded",
] }
bevy_utils = { version = "0.17.3", default-features = false, features = [
    "parallel",
    "std",
] }
bytemuck = "1.24.0"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["debug", "deref", "deref_mut", "into"] }
dotenvy = "0.15.7"
guillotiere = "0.6.2"
image = "0.25.9"
indexmap = { version = "2.13.0", features = ["serde"] }
morton-encoding = "2.0.1"
nalgebra = { version = "0.34.1", features = ["bytemuck", "serde-serialize"] }
noise = "0.9.0"
num-traits = "0.2.19"
palette = { version = "0.7.6", features = ["bytemuck", "named", "serializing"] }
parking_lot = "0.12.5"
pollster = "0.4.0"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = { version = "0.9.11", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wgpu = "28.0.0"
winit = "0.30.12"
