[package]
name = "sandvox"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
astro = "2.0.0"
bdf-parser = { git = "https://github.com/embedded-graphics/bdf.git", rev = "667ad27" }
bevy_ecs = { version = "0.17.3", default-features = false, features = [
    "bevy_reflect",
    "trace",
    "track_location",
    "multi_threaded",
] }
bevy_reflect = { version = "0.17.3", default-features = false, features = [
    "auto_register",
    "auto_register_inventory",
    "std",
] }
bevy_tasks = { version = "0.17.3", default-features = false, features = [
    "multi_threaded",
] }
bevy_utils = { version = "0.17.3", default-features = false, features = [
    "parallel",
    "std",
] }
bitflags = { version = "2.10.0", features = ["serde", "bytemuck"] }
bytemuck = "1.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = [
    "debug",
    "deref",
    "deref_mut",
    "into",
] }
dotenvy = "0.15.7"
futures-lite = { version = "2.6.1", optional = true }
gltf = { version = "1.4.1", features = ["names", "extras"] }
guillotiere = "0.6.2"
humansize = "2.1.3"
image = "0.25.9"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
morton = { version = "0.1.0", path = "../morton" }
nalgebra = { version = "0.34.1", features = ["bytemuck", "serde-serialize"] }
noise = "0.9.0"
num-traits = "0.2.19"
palette = { version = "0.7.6", features = ["bytemuck", "named", "serializing"] }
parking_lot = "0.12.5"
pollster = "0.4.0"
profiling = "1.0.17"
puffin = { version = "0.19.1", optional = true }
puffin_http = { version = "0.16.1", optional = true }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
redb = "3.1.0"
rodio = { version = "0.21.1", default-features = false, features = [
    "playback",
    "vorbis",
] }
sandvox-rcon = { version = "0.1.0", path = "../sandvox-rcon", optional = true }
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.149"
taffy = { version = "0.9.2", default-features = false, features = [
    "std",
    "block_layout",
    "flexbox",
    "grid",
    "content_size",
    "alloc",
    "taffy_tree",
] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", optional = true, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
] }
tokio-util = { version = "0.7.18", optional = true, features = ["codec"] }
toml = { version = "0.9.11", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wgpu = { version = "28.0.0", features = ["serde"] }
winit = { version = "0.30.12", features = ["serde"] }

[build-dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["puffin", "rcon"]
puffin = ["dep:puffin", "dep:puffin_http", "profiling/profile-with-puffin"]
rcon = ["tokio", "dep:sandvox-rcon"]
tokio = ["dep:tokio", "dep:tokio-util", "dep:futures-lite"]


[[bench]]
name = "mesh_chunk"
harness = false
